# code-snippets

./: cleanup.sh
bash/: cmake_configure.sh  stop_watch.sh
c/atomic/: main.c
c/cmd_options/: CMakeLists.txt  common_options.c  common_options.h  main.c
c/cmd_options/include/: program_options.h
c/cmd_options/src/: program_options.c
c/cmd_options/test/: CMakeLists.txt  testrunner.cpp
c/ipc/: CMakeLists.txt  heartbeat.c  heartbeat.h  listener.c  publisher.c
c/ipc/cmake/: CMakeLists.txt.nng
c/shared_lib/: Makefile  main.c  myshared.c  myshared.h
cpp/cfg_file/: CMakeLists.txt  Input.cfg  main.cpp
cpp/cmd_options/: CMakeLists.txt
cpp/cmd_options/example_input/: file.txt
cpp/cmd_options/include/: cmd_args.hpp
cpp/cmd_options/src/: cmd_args.cpp  main.cpp
cpp/construct_at/: main.cpp
cpp/data_structures/: Makefile  queue.cpp  stack.cpp
cpp/leetcode_and_co/: unique_letters.cpp
cpp/leetcode_and_co/id_parser/: CMakeLists.txt
cpp/leetcode_and_co/id_parser/example_input/: small.txt
cpp/leetcode_and_co/id_parser/include/: container.hpp  scanner.hpp
cpp/leetcode_and_co/id_parser/src/: cmd_args.cpp  container.cpp  main.cpp  scanner.cpp
cpp/leetcode_and_co/id_parser/unit_tests/: CMakeLists.txt  test_runner.cpp
cpp/method_call/: Makefile  method_call.cpp
cpp/mock_db/: CMakeLists.txt  main.c  mock_database.cpp
cpp/pimpl/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  pimpl.h  pimpl_impl.h
cpp/various/: bit_cast.cpp  list.cpp  unique_ptr_cleanup.cpp  variant.cpp
haskell/: ghci_cmd.txt  notes.txt  references.txt
haskell/list/: .gitignore  append_list.hs  prepend_list.hs
haskell/standalone/: decl.hs  functions.hs  lists.hs  recurse.hs  type_class.hs
python/cmd_args/: command_args.py
python/data_structures/: queue.py  stack.py
python/file_ops/: path_list.py
python/leetcode/: first_unique.py  nesting_depth.py  remove_duplicates.py
rust/aoc_2022/: Cargo.toml
rust/aoc_2022/assets/: day7_sample.txt
rust/aoc_2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  file.rs  main.rs
rust/binary_tree/: Cargo.toml
rust/binary_tree/src/: lib.rs
rust/book/advanced_functions/: Cargo.toml
rust/book/advanced_functions/src/: main.rs
rust/book/advanced_traits/: Cargo.toml
rust/book/advanced_traits/src/: full_qualified.rs  main.rs  super_trait.rs  trait_type.rs
rust/book/advanced_types/: Cargo.toml
rust/book/advanced_types/src/: main.rs
rust/book/blog/: Cargo.toml
rust/book/blog/src/: lib.rs
rust/book/closures/: Cargo.toml
rust/book/closures/src/: main.rs
rust/book/concurrency/: Cargo.toml
rust/book/concurrency/src/: main.rs
rust/book/control_flow/: Cargo.toml
rust/book/enums/: Cargo.toml
rust/book/error/: Cargo.toml
rust/book/external_packages/: Cargo.toml
rust/book/functions/: Cargo.toml
rust/book/generics/: Cargo.toml
rust/book/guessing_game/: Cargo.toml
rust/book/hashmap/: Cargo.toml
rust/book/hello_cargo/: Cargo.toml
rust/book/iterators/: Cargo.toml
rust/book/let_if/: Cargo.toml
rust/book/lifetimes/: Cargo.toml
rust/book/matches/: Cargo.toml
rust/book/minigrep/: Cargo.toml
rust/book/modules_scope/: Cargo.toml
rust/book/multi_file/: Cargo.toml
rust/book/pattern_matching/: Cargo.toml
rust/book/shadow_var/: Cargo.toml
rust/book/slices/: Cargo.toml
rust/book/smart_pointers/: Cargo.toml
rust/book/strings/: Cargo.toml
rust/book/struct_methods/: Cargo.toml
rust/book/struct_prog/: Cargo.toml
rust/book/structs/: Cargo.toml
rust/book/tests/: Cargo.toml
rust/book/traits/: Cargo.toml
rust/book/unsafe_rust/: Cargo.toml
rust/book/variable_int/: Cargo.toml
rust/book/variables/: Cargo.toml
rust/book/vectors/: Cargo.toml
rust/book/web_server/: Cargo.toml
rust/build_profiles/: Cargo.toml
rust/call_from_c/: Cargo.toml  Makefile  main.cpp
rust/call_from_c/src/: lib.rs
rust/call_from_c_struct/: Cargo.toml  Makefile  main.cpp
rust/call_from_c_struct/src/: lib.rs
rust/ffi_bindgen/: CMakeLists.txt  Cargo.toml  build.rs  opaque.h
rust/ffi_bindgen/src/: main.rs
rust/ffi_opaque_type/: Cargo.toml  build.rs  opaque.c
rust/ffi_opaque_type/src/: main.rs
rust/file_ops/: Cargo.toml
rust/file_ops/src/: main.rs
rust/leetcode/first_unique/: Cargo.toml
rust/list/: Makefile  reversed_single_linked.rs
rust/lsd_sort/src/: main.rs
rust/nesting_depth/: Cargo.toml
rust/nesting_depth/src/: main.rs
rust/operators/: Cargo.toml
rust/operators/src/: main.rs
rust/ownership/: Cargo.toml
rust/print/: Makefile  printer.rs
rust/proj_euler/: Cargo.toml
rust/references/: Cargo.toml
rust/references/src/: main.rs
rust/serial/: Cargo.toml
rust/serial/src/: main.rs
rust/signal_handler/: Cargo.toml  README.md
rust/signal_handler/examples/: demo.rs
rust/signal_handler/src/: env.rs  lib.rs  main.rs
rust/single_linked_list/: Cargo.toml
rust/single_linked_list/src/: main.rs
rust/sorts/lsd_sort/: Cargo.toml  words.txt
rust/stack/: .gitignore  Makefile  static_size_stack.rs  vec_stack.rs
rust/strings/: Makefile  string.rs
rust/zmq_protobuf/: Cargo.toml  Readme.md
rust/zmq_protobuf/src/: main.rs  zmq_pub.rs  zmq_sub.rs
rust/zmq_protobuf/src/protobuf_files/: mod.rs  sensor_messages.proto
systemverilog/: .gitignore
systemverilog/fsm_registered_output/: Makefile
systemverilog/fsm_registered_output/hdl/: traffic_light.sv
systemverilog/fsm_registered_output/tb/: program.sv  traffic_light_tb.sv
zig/build_system/: build.zig  main.c
zig/build_system_simple/: build.zig
(+44 files in other folders)
