[package]
name = "zmq_protobuf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
zmq = "0.9"
protobuf = "2.25.1"

[[bin]]
name = "zmq_pub"
path = "src/zmq_pub.rs"

[[bin]]
name = "zmq_sub"
path = "src/zmq_sub.rs"
